# lossless-hermes-py

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/lossless_claw/: __init__.py  assembler.py  compaction.py  retrieval.py  summarizer.py  tokens.py  tools.py
src/lossless_claw/db/: config.py  connection.py  migration.py
src/lossless_claw/store/: conversation.py  summary.py
src/lossless_hermes/: __init__.py  assembler.py  compaction.py  plugin.yaml  retrieval.py  summarizer.py  tokens.py  tools.py
src/lossless_hermes/db/: config.py  connection.py  migration.py
src/lossless_hermes/store/: conversation.py  identity.py  summary.py
tests/: conftest.py  test_assembler.py  test_compaction.py  test_config.py  test_database.py  test_engine.py  test_identity.py  test_stores.py  test_tokens.py
