[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lossless-hermes-py"
version = "0.1.5"
description = "Lossless Context Management (LCM) for Hermes Agent — DAG-based conversation summarization that never forgets"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Michael Steuer", email = "michael@make.services"},
]
keywords = [
    "hermes-agent",
    "context-management",
    "llm",
    "summarization",
    "conversation-memory",
    "dag",
    "context-engine",
    "ai-agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/mssteuer/lossless-hermes-py"
Repository = "https://github.com/mssteuer/lossless-hermes-py"
Issues = "https://github.com/mssteuer/lossless-hermes-py/issues"
Changelog = "https://github.com/mssteuer/lossless-hermes-py/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
]
litellm = [
    "litellm>=1.0",
]
openai = [
    "openai>=1.0",
]

[project.entry-points."hermes_agent.plugins"]
lossless-hermes = "lossless_hermes"

[tool.hatch.build.targets.wheel]
packages = ["src/lossless_hermes"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lossless_hermes/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "plugin.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "hatch>=1.16.5",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
